Hotfixes: shuffle answers of questions for tests. Characters limit for elements from tests. Tests